.search button{     border: 0;     outline: 0;     background: #ebfffc;     border-radius: 25%;     width:60px;     height: 42px;     cursor: pointer;
}
.search button img{
    width: 16px;

}
.weather-icon{
    width: 170px;
    margin: 30px;

}
.weather h1{
    font-size: 80px;
    font-weight: 400;
    margin-top: 50px ;

}
.weather h2{
    font-size: 80px;
    font-weight: 400;
    margin-top: -10px;

}
.details{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
    margin-top: 50px;

}
.col{
    width: 500px;
    margin-top: 50px;
    margin-left:100px ;
}
.cool
{
    width:100px;
    margin-top: 1px;
}
.humidity {
    width: 400px;
    margin-left: 120px;
}

.wind {
    width: 100px;
    margin-right: 100px;
}

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
                         <div class="col">
                             <img src="images/humidity.png" >
                         </div>
-                        <p class="humidity">50%</p>
-                        <p> Humidity</p>
+                        <p class="humidity">Humidity:50%</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="cool">
                             <img src="images/wind.png">
                         </div>
                         <p class="wind">15km/h</p>
-                        <p> Wind Speed</p>
+                        <p class="speed"></p>
             </div>
         </body>
         </html>
