--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="card">
         <div class="search">
@@ -18,16 +16,14 @@
             <h1 class="temp">22°C</h1>
             <h2 class="city">New York</h2>
             <div class="details">
-                <div class="col">
+                <div>
                     <img src="images/humidity.png">
+                    <p class="humidity">Humidity: 50%</p>
                 </div>
-                <p class="humidity">Humidity: 50%</p>
-            </div>
-            <div class="cool">
-                <div class="col">
+                <div>
                     <img src="images/wind.png">
+                    <p class="wind">Wind: 15 km/hr</p>
                 </div>
-                <p class="wind">15 km/h</p>
             </div>
         </div>
     </div>
@@ -39,7 +35,6 @@
         async function checkWeather(city) {
             const response = await fetch(apiUrl + city + '&appid=' + apiKey);
             const data = await response.json();
-            console.log(data);
             document.querySelector(".city").innerHTML = data.name;
             document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
             document.querySelector(".humidity").innerHTML = "Humidity: " + data.main.humidity + "%";
@@ -53,9 +48,7 @@
             checkWeather(searchBox.value);
         });
 
-        // You may want to call checkWeather() with a default city when the page loads
         checkWeather("New York");
     </script>
 </body>
-
 </html>
